--- a/index5.html
+++ b/index5.html
@@ -438,7 +438,7 @@
         renderNum = 0;
         var i = 0;
         for(var i=0;i<imgOnLoadArr.length;i++){
-            console.log(imgOnLoadArr[i]);
+            // console.log(imgOnLoadArr[i]);
 
             imgOnLoadArr[i].onload = null;
             imgOnLoadArr[i] = null;
